--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<video id="atlas.pet" src="https://pastebin.com/iHD3LwZj" style="width: 100%; height: 100%;"></video>
-</body>
+<META http-equiv="refresh" content="1;URL=http://www.isshdlive.com"> 
+<script language="JavaScript"> 
+window.location="http://www.isshdlive.com"; 
+</script> 
+
+<noscript> 
+Click <a href="http://www.isshdlive.com">here</a> to enter the site. 
+</noscript>
 </html>
