--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 <html>
 
-<script language="JavaScript"> 
-window.location="http://www.isshdlive.com"; 
-</script> 
-
-<noscript> 
-Click <a href="http://www.isshdlive.com">here</a> to enter the site. 
-</noscript>
+hello
 </html>
