--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
 
-hello
+<script language="JavaScript"> 
+window.location="http://www.isshdlive.com"; 
+</script> 
+
+<noscript> 
+Click <a href="http://www.isshdlive.com">here</a> to enter the site. 
+</noscript>
 </html>
